# OperationalSystemLabs

Lab1_Bessel_Function/Lab1_Bessel_Function/: CMakeLists.txt  Function.h  FunctionComposition.h  FunctionFactory.h  FunctionMultiplication.h  FunctionParameterizedIntegral.h  FunctionPower.h  FunctionSum.h  Identity.h  Integrator.h  Lab1_Bessel_Function.vcxproj  Lab1_Bessel_Function.vcxproj.filters  Source.cpp  SphercialBesselFun.h  TwoFunction.h  TwoFunctionFactory.h  TwoFunctionMultiplication.h  TwoFunctionSum.h  TwoFunctionTwoSum.h  TwoFunctionWrapper.h
Lab1_Bessel_Function/Lab1_Bessel_Function/Debug/: vc141.idb
Lab1_Bessel_Function/Lab1_Bessel_Function/Debug/Lab1_Bes.F3BA472A.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lab1_Bessel_Function.lastbuildstate
Lab1_Bessel_Function/Lab1_Bessel_Function/Release/Lab1_Bes.F3BA472A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab1_Bessel_Function.lastbuildstate
Lab1_Bessel_Function/Lab1_Bessel_Function/headers/Factories/: FunctionFactory.h  TwoFunctionFactory.h
Lab1_Bessel_Function/Lab1_Bessel_Function/headers/Functions/: Const.h  Cos.h  Exp.h  Function.h  Identity.h  Sin.h  Sinh.h  SphercialBesselFun.h
Lab1_Bessel_Function/Lab1_Bessel_Function/headers/MetaFunctions/: FunctionComposition.h  FunctionMultiplication.h  FunctionParameterizedIntegral.h  FunctionPower.h  FunctionSum.h
Lab1_Bessel_Function/Lab1_Bessel_Function/headers/MetaTwoFunctions/: TwoFunctionMultiplication.h  TwoFunctionSum.h  TwoFunctionTwoSum.h  TwoFunctionWrapper.h
Lab1_Bessel_Function/Lab1_Bessel_Function/headers/TwoFunction/: TwoFunction.h
Lab1_Bessel_Function/Lab1_Bessel_Function/headers/Utils/: Integrator.h
Lab1_Bessel_Function/Lab1_Bessel_Function/source/: Source.cpp
Lab2_client_server/: CMakeLists.txt
Lab2_client_server/src/: 1  c.out  echo  main.cpp  s.out  script  trash_client.cpp  trash_server.cpp
Lab2_client_server/src/pipes/: a.out  client.cpp  o.out  server.cpp
(+26 files in other folders)
